Possible overflow fix

--- a/Resume.css
+++ b/Resume.css
@@ -1,8 +1,20 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
 /*
 html{
     
     margin-left: 100px;
     max-width: 80%;
+    html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
     
 }
 */
